tests/typing/bad/testfile-arity-2.go
package main

func f(x int) { }
func main() { f() }
